# agpunicas

./: .gitignore  LICENSE  README.md  Thumbs.db
Proto-ComplexPlatformer-Box2D/: AnimatedSprite.h  Box.cpp  Box.h  CMakeLists.txt  ComplexPlatformerGame.cpp  ComplexPlatformerGame.h  ComplexPlatformerGameScene.cpp  ComplexPlatformerGameScene.h  DynamicObject.cpp  DynamicObject.h  Enemy.cpp  Enemy.h  FilledSprite.cpp  FilledSprite.h  Fire.cpp  Fire.h  ForegroundScene.cpp  ForegroundScene.h  Game.cpp  Game.h  GameScene.cpp  GameScene.h  Gear.cpp  Gear.h  HUD.cpp  HUD.h  KinematicObject.cpp  KinematicObject.h  LevelLoader.cpp  LevelLoader.h  Menu.cpp  Menu.h  Object.cpp  Object.h  OverlayScene.cpp  OverlayScene.h  Player.cpp  Player.h  RenderableObject.cpp  RenderableObject.h  (+23 more)
Proto-ComplexPlatformer-Box2D/sprites/PlayerIdle/: Thumbs.db
Proto-ComplexPlatformer-Box2D/sprites/PlayerWalk/: Thumbs.db
Proto-RPG/: AnimatedSprite.cpp  AnimatedSprite.h  Audio.h  CollidableObject.cpp  CollidableObject.h  DialogBox.cpp  DialogBox.h  DynamicObject.cpp  DynamicObject.h  Enemy.cpp  Enemy.h  FilledSprite.cpp  FilledSprite.h  Game.cpp  GameScene.cpp  GameScene.h  HUD.cpp  HUD.h  Item.cpp  Item.h  LevelLoader.cpp  LevelLoader.h  Link.cpp  Link.h  Menu.cpp  Menu.h  MovableObject.cpp  MovableObject.h  NPC.cpp  NPC.h  Object.h  Pathfinding.cpp  Pathfinding.h  Portal.cpp  Portal.h  RPGGame.cpp  RPGGame.h  RPGGameScene.cpp  RPGGameScene.h  RenderableObject.cpp  (+22 more)
Proto-RPG/editor/: EditorScene.json
Proto-RPG/shaders/: fragment_shader.glsl  vertex_shader.glsl
Proto-RPG/sprites/: Thumbs.db
Proto-SimplePlatformer/: AnimatedSprite.cpp  Audio.cpp  CMakeLists.txt  CollidableObject.cpp  CollidableObject.h  DynamicObject.cpp  DynamicObject.h  Enemy.cpp  Enemy.h  FilledSprite.cpp  FilledSprite.h  Game.cpp  Game.h  GameScene.cpp  GameScene.h  HUD.cpp  Hammer.cpp  Hammer.h  HammerBrother.cpp  HammerBrother.h  KinematicObject.cpp  KinematicObject.h  LevelLoader.cpp  LevelLoader.h  Lift.cpp  Lift.h  Mario.cpp  Mario.h  Menu.cpp  MovableObject.cpp  MovableObject.h  PlatformerGame.cpp  PlatformerGame.h  PlatformerGameScene.cpp  PlatformerGameScene.h  RenderableObject.cpp  Scheduler.h  Sprite.cpp  Sprite.h  SpriteFactory.cpp  (+12 more)
Proto-SimplePlatformer/sprites/: Thumbs.db
core/: AnimatedSprite.cpp  AnimatedSprite.h  Audio.cpp  Audio.h  CMakeLists.txt  CPUShaderWindow.cpp  CPUShaderWindow.h  Clipper.h  EditableObject.cpp  EditableObject.h  EditorScene.cpp  EditorScene.h  EditorUI.cpp  EditorUI.h  FilledSprite.cpp  FilledSprite.h  Fonts.cpp  Fonts.h  GPUShaderWindow.cpp  GPUShaderWindow.h  Game.cpp  Game.h  GameScene.cpp  GameScene.h  Grid.cpp  Grid.h  Object.cpp  Object.h  OpenGLWindow.cpp  OpenGLWindow.h  OverlayScene.cpp  OverlayScene.h  Quadtree.cpp  Quadtree.h  RenderableObject.cpp  RenderableObject.h  Scene.cpp  Scene.h  Singleton.h  Sprite.cpp  (+12 more)
utils/: collisionUtils.h  fileUtils.h  geometryUtils.h  graphicsUtils.h  mathUtils.h  sdlUtils.h  shaderUtils.h  stringUtils.h  timeUtils.h
